# clean-maven-faild-product

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
