[package]
name = "cmvn"
version = "0.1.1"
description = "A simple and efficient script to quickly clean up failed Maven build artifacts."
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
console = { version = "0.15.11", features = ["windows-console-colors"] }
dirs-next = "2.0.0"
indicatif = "0.17.11"
walkdir = "2.5.0"
